example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/preserve-host: "true"
spec:
  tls:
    - hosts:
        - example.mobilelife.de
      secretName: tls.example.mobilelife.de
  rules:
    - host: example.mobilelife.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
